feat: Soporte para cualquier tipo de imagen y mejoras en el procesamiento
- Actualizar generate_csv.py para aceptar cualquier formato de imagen soportado por Pillow
- Eliminar restricciones de extensiÃ³n en main.py, validar imÃ¡genes directamente con Pillow
- Agregar validaciÃ³n robusta que convierte imÃ¡genes a RGB para compatibilidad con el modelo
- Actualizar frontend para indicar soporte de mÃºltiples formatos de imagen
- Agregar backend FastAPI con integraciÃ³n de modelo de IA para clasificaciÃ³n
- Agregar frontend React completo con tabla de resultados y descarga CSV
- Agregar configuraciÃ³n de despliegue (Docker, Railway, Render)
- Agregar documentaciÃ³n consolidada en README.md

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,21 @@ Thumbs.db
 dataset.csv
 dataset/healthy/*
 dataset/sick/*
+
+# Directorios de la API
+uploads/
+outputs/
+*.csv
+
+# Variables de entorno
+.env
+.env.local
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+
+# Modelo entrenado (descomentar si es muy grande)
+# artifacts/best_model.pth
