feat: Implementar sistema de aprendizaje continuo con reentrenamiento automático
- Agregar feedback_storage.py para almacenar feedback y datos de entrenamiento
- Agregar incremental_train.py para reentrenamiento incremental del modelo
- Implementar endpoints de API para feedback y reentrenamiento
- Agregar componente CorrectionModal para correcciones de usuario
- Implementar panel de aprendizaje continuo en frontend con toggle automático
- Agregar polling para estado de reentrenamiento en tiempo real
- Actualizar README con documentación completa de despliegue y consideraciones de persistencia
- Actualizar Dockerfile para incluir directorios necesarios
- Agregar pandas, scikit-learn y matplotlib a requirements.txt
- Actualizar .gitignore para excluir datos de feedback y backups

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,10 @@ frontend/dist/
 frontend/.env
 frontend/.env.local
 
+# Feedback y aprendizaje continuo
+feedback_data/
+dataset_incremental.csv
+artifacts/backups/
+
 # Modelo entrenado (descomentar si es muy grande)
 # artifacts/best_model.pth
