--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ torchvision>=0.15.0
 # Procesamiento de imágenes
 Pillow>=10.0.0
 numpy>=1.24.0,<2.0.0
+
+# Análisis de datos y ML
+pandas>=2.0.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
