--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: algoritmo-ia-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: chmod +x start.sh && bash start.sh
     envVars:
       - key: PORT
         value: 8000
